--- a/response.html
+++ b/response.html
@@ -110,7 +110,7 @@
 	</div>
     <section class="thank-you-wrap" style="max-height: 80vh; overflow: hidden; max-width: 100vw;">            
         <div class="thanks-copy" style="text-align: center; max-width: 100vw; display: block;">
-            <img src="./Images/rustomjee-lifestyle.jpg" style="max-height: 60vh;" alt="" srcset="">
+            <img src="./Images/rustomjee-lifestyle.webp" style="max-height: 60vh;" alt="" srcset="">
             <br>
             <span>
                 <h4>Thank You</h4>
