Added the GTM Parameters Cleaned the code a bit

--- a/response.html
+++ b/response.html
@@ -15,6 +15,10 @@
 <meta name="description" content="Rustomjee Seasons" />
 <meta name="keywords" content="Rustomjee Seasons" />
 
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RDJVGS"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			<!-- End Google Tag Manager (noscript) -->
 		
 
 
@@ -25,20 +29,14 @@
 	<link rel="stylesheet" href="./CSS/font-awesome.css" type="text/css"/>
 	
 
-	<!-- <script language="javascript" type="text/javascript" src="https://www.rustomjeeseasons-bkc.in/config.js.php"></script> -->
 	<script language="javascript" type="text/javascript" src="./JS/jquery-1.7.2.min.js"></script>
-	<!-- <script language="javascript" type="text/javascript" src="https://www.rustomjeeseasons-bkc.in/config.js.php"></script> -->
 
 
 	<script language="javascript" type="text/javascript" src="./JS/common_core.js"></script>
-	<!-- <script language="javascript" type="text/javascript" src="./JS/mxslider.js"></script> -->
-	<!-- <script language="javascript" type="text/javascript" src="./JS/mxdialog.js"></script> -->
+
 	<script language="javascript" type="text/javascript" src="./JS/common_inc.js"></script>
 	
-	
-	<!-- <script language="javascript" type="text/javascript" src="https://www.rustomjeeseasons-bkc.in/core/js/validate.inc.js"></script> -->
-	<!-- <script type="text/javascript" src="./JS/x-home.js"></script>  -->
-	<!-- <script type="text/javascript" src="./JS/site.js"></script>  -->
+
 	<script type="text/javascript" src="./JS/slick.min.js"></script> 
 	<link rel="stylesheet" type="text/css" href="./CSS/jquery.fancybox.min.css"/>
 	<script type="text/javascript" src="./JS/jquery.fancybox.min.js"></script>
@@ -71,7 +69,10 @@
 </head>
 
 <body style="box-sizing: border-box; max-width: 100vw; max-height: 100vh; overflow: hidden;">	
-
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RDJVGS"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			<!-- End Google Tag Manager (noscript) -->
 	
 
 <div class="loader"></div>
