Download Brochure Disabled

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 		</div>
 	 </div>
 	</section> 
-	<section style="padding-top:10px; text-align:center;">
+	<!-- <section style="padding-top:10px; text-align:center;">
 		<div class="wrapper">
 			<div class="col-3 desk-only">&nbsp;</div>
 			<div class="col-3">
@@ -292,7 +292,7 @@
 				<a href="https://storage.net-fs.com/hosting/4574942/82/index.htm" target="_blank"><img src="./Images/take-a-tour.png"></a>
 			</div>
 		</div>
-	 </section>
+	 </section> -->
    <section class="about" id="about">
 	   <div class="wrapper">
 			
