--- a/index.html
+++ b/index.html
@@ -1015,17 +1015,10 @@
 			<div class="content">
 				<h4>Disclaimer</h4>
 				<p>
-	All layouts, locations, plans, specifications, designs, elevations, features, amenities, facilities, services, product/equipment type and brand mentioned are indicative of the kind of development proposed in this Project and its finality is subject to the approval of the respective authorities or as required by the Promoter/Developer in the interest of continuing improvement, without prior notice or obligation. Minor variations (+/- 3%) in actual carpet areas may occur as a result of design/construction variances, finishing tolerances and column projections.</p>
+					Disclaimer: The content is for information purposes only and does not constitute an offer to avail of any service. Images for representation purpose only. This is not the official website. This website is maintained by a channel partner. We may also share data, information with rera registered sub brokers/companies/projects for further processing. 
+                <!-- *One ICC: OC till 51 habitable floors. Two ICC: OC till 54 habitable floors.  -->
+                	MahaRERA Registration No: Wing D: P51800021028, available on the website: <a href="https://maharera.mahaonline.gov.in/" target="_blank"> https://maharera.mahaonline.gov.in.</a></p>
 <p>
-	The pictures/images and perspective views of the premises/building/layout are an artist&#39;s impression of the development and for representational purposes only and are not a part of actual deliverables. Furniture, soft furnishing, gadgets, etc. are not part of the offering. The details, pictures and images contained in the leaflets, brochures or any other printed material does not constitute an offer and/or contract of any type between the Promoter/Developer and the Purchaser.</p>
-<p>
-	All transactions in respect of this Project shall be subject to the terms and conditions of the Agreement for Sale to be entered into between the Promoter/Developer and the Purchaser.</p>
-<p>
-	The Properties have been mortgaged in favour of IDBI Trusteeship Services Limited (beneficiary: Piramal) and the buyer will be required to obtain a no-objection certificate prior to entering into any agreement for the sale of any unit in the Project.</p>
-<p>
-	MahaRERA Registration No: Wing D: P51800021028, available on the website: <a href="https://maharera.mahaonline.gov.in/" target="_blank"> https://maharera.mahaonline.gov.in.</a></p>
-<p>
-	*The personal information and details voluntarily provided by customers to us shall not unless otherwise communicated to the customers, be disclosed to any entity which is not part of the Promoter&#39;s group of companies*</p>
 			</div>
 		</div>
 	</section>
