Response field updated

--- a/response.html
+++ b/response.html
@@ -1,1 +1,143 @@
-Coming Soon
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="../www.w3.org/1999/xhtml.0.delayed">
+
+<head>
+	<link rel="shortcut icon" type="image/x-icon" href="./Images/favicon.png"  rel="SHORTCUT ICON">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0" />
+    <meta name="title" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="Copyright" content="Copyright 2014. All Rights Reserved.">
+	
+<title>Rustomjee Seasons</title>
+<meta name="description" content="Rustomjee Seasons" />
+<meta name="keywords" content="Rustomjee Seasons" />
+
+			<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-5RDJVGS');</script>
+		<!-- End Google Tag Manager -->
+		
+
+
+<link rel="stylesheet" href="./CSS/style.css" type="text/css"/>
+	<!-- <link rel="stylesheet" href="./CSS/thank-you.css" type="text/css"/> -->
+	<link rel="stylesheet" href="./CSS/device.css" type="text/css"/>
+	<link rel="stylesheet" href="./CSS/slick.css" type="text/css"/>
+	<link rel="stylesheet" href="./CSS/font-awesome.css" type="text/css"/>
+	
+
+	<script language="javascript" type="text/javascript" src="./JS/jquery-1.7.2.min.js"></script>
+
+
+	<script language="javascript" type="text/javascript" src="./JS/common_core.js"></script>
+
+	<script language="javascript" type="text/javascript" src="./JS/common_inc.js"></script>
+	
+
+	<script type="text/javascript" src="./JS/slick.min.js"></script> 
+	<link rel="stylesheet" type="text/css" href="./CSS/jquery.fancybox.min.css"/>
+	<script type="text/javascript" src="./JS/jquery.fancybox.min.js"></script>
+
+	<script type="text/javascript">
+		
+		$(document).ready(function(){
+			$('ul.home-banner').slick({
+				slidesToShow: 1,
+				slidesToScroll: 1,
+				autoplay: true,
+				autoplaySpeed: 2000,
+				speed: 2500,
+				arrows: false,
+				dots:true,
+			});
+			$('ul.Residence').slick({
+				slidesToShow: 1,
+				slidesToScroll: 1,
+				autoplay: false,
+				autoplaySpeed: 2000,
+				arrows: true,
+			});
+			// Header pop close
+			$(".btn-close").click(function(){
+    			$(".e-brochure-popup").hide();
+			});
+	 	});           
+	</script>
+</head>
+
+<body style="box-sizing: border-box; max-width: 100vw; max-height: 100vh; overflow: hidden;">	
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RDJVGS"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+			<!-- End Google Tag Manager (noscript) -->
+	
+
+<div class="loader"></div>
+	<div class="header">
+		<div class="wrapper" style="width: auto !important; display: block;">
+		<div class="logo">
+			<!-- <a href="https://www.rustomjeeseasons-bkc.in" class="logo"> -->
+                <img src="./Images/logo.png">
+            <!-- </a>  -->
+		</div>
+				<!-- <div id="nav-icon" class=""> -->
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+		<!-- <div class="menu-box">
+			<ul class="main-menu page">
+			    <li><a class="menu-btn home-menu-btn" rel="home-banner" href="https://www.rustomjeeseasons-bkc.in/#home-banner">HOME</a></li>
+			    <li><a class="menu-btn about-menu-btn" rel="about" href="https://www.rustomjeeseasons-bkc.in/#about">ABOUT US</a></li>
+			    <li><a class="menu-btn config-sec-menu-btn" rel="configurations-sec" href="https://www.rustomjeeseasons-bkc.in/#configurations-sec">CONFIGURATION</a></li>
+			    <li><a class="menu-btn gallery-menu-btn" rel="gallery" href="https://www.rustomjeeseasons-bkc.in/#gallery">GALLERY</a></li>
+				<li><a class="menu-btn gallery-menu-btn" rel="floorplan" href="https://www.rustomjeeseasons-bkc.in/#floorplan">FLOOR PLAN</a></li>
+			    				<li><a class="menu-btn location-map-menu-btn" rel="location-sec" href="https://www.rustomjeeseasons-bkc.in/#location-sec">LOCATION</a></li>
+				<li><a class="menu-btn contact-sec-menu-btn" rel="contact" href="https://www.rustomjeeseasons-bkc.in/#contact">CONTACT US</a></li>
+				<li><a class="menu-btn disclaimer-menu-btn" rel="disclaimer" href="https://www.rustomjeeseasons-bkc.in/#disclaimer">DISCLAIMER</a></li>
+			</ul>
+		</div> -->
+		</div>
+	</div>
+
+		<div class="e-brochure-popup" style="display: none;">
+		<a href="javascript:void(0)" class="close-btn btn-close"></a>
+	</div>
+    <section class="thank-you-wrap" style="max-height: 80vh; overflow: hidden; max-width: 100vw;">            
+        <div class="thanks-copy" style="text-align: center; max-width: 100vw; display: block;">
+            <img src="./Images/rustomjee-lifestyle.webp" style="max-height: 60vh;" alt="" srcset="">
+            <br>
+            <span>
+                <h4>Thank You</h4>
+              <p>You are one step closer to owning a Bespoke Rustomjee residence.</br> Our asset class specialist will get in touch with you shortly.</br>
+                </p>
+
+            </span>			
+	</div>
+</section>
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("div.thank-you-page").css('height',$(window).height());
+				
+	});
+	
+</script><script>
+$(document).ready(function () {
+  $("a.move-to-map").click(function(){
+		var headerH = $('div.header').innerHeight();
+		sectionToMove = $(this).attr("rel");
+		$("html, body").animate({ scrollTop: $("#"+sectionToMove).offset().top-headerH}, 1000);
+	});
+		
+});
+</script>
+</body>
